Design tweaks and fixes. - Constraint failure image height. - Fix quiz "try again" feature. - Always redirect to https://tinypowerhouse.org - Make incorrect buttons vertically aligned - Fix fonts - Fix button text being cut off -

--- a/src/theme/_quiz.scss
+++ b/src/theme/_quiz.scss
@@ -30,6 +30,8 @@
   @media (min-width: 576px) {
     display: none;
   }
+
+  max-height: 50vh;
 }
 
 .line-grid {
